--- a/portfolio-landing/index.html
+++ b/portfolio-landing/index.html
@@ -12,5 +12,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- <script src="/src/js/ibg.js"></script> -->
+    <script src="/src/js/burger.js"></script>
   </body>
 </html>
