--- a/portfolio-landing/index.html
+++ b/portfolio-landing/index.html
@@ -8,10 +8,11 @@
     <link rel="icon" href="/public/img/Logo.svg" />
     <link rel="stylesheet" href="./src/css/common.css">
   </head>
-  <body>
+  <body> 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- <script src="/src/js/ibg.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/src/js/burger.js"></script>
   </body>
 </html>
