--- a/portfolio-landing/index.html
+++ b/portfolio-landing/index.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing</title>
     <link rel="icon" href="/public/img/Logo.svg" />
-    <link rel="stylesheet" href="./src/css/common.css">
+    <link rel="stylesheet" href="./src/css/common.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body> 
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- <script src="/src/js/ibg.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/src/js/burger.js"></script>
+    <script src="/src/js/validation.js"></script>
   </body>
 </html>
