--- a/portfolio-landing/index.html
+++ b/portfolio-landing/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing</title>
-    <link rel="icon" href="/public/img/Logo.svg" />
-    <link rel="stylesheet" href="./src/css/common.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <title>Landing</title>
+
+    <link rel="icon" href="/public/img/Logo.svg" />
+
+    <link rel="stylesheet" href="./src/css/_reset.css">
+    <link rel="stylesheet" href="./src/css/common.css" />
+    <link rel="stylesheet" href="./src/css/_fonts.css">
+    
+
   </head>
   <body>
     <div id="root"></div>
